# lp1-ranges

./: CMakeLists.txt  README.md  a.out
include/: int_ranges.h
src/: int_ranges.cpp
test/: main.cpp
